--- a/github-action-xmllint/Dockerfile
+++ b/github-action-xmllint/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:10.16.0-alpine
+FROM debian:jessie-slim
 
 LABEL "com.github.actions.name"="Markdownlint"
 LABEL "com.github.actions.description"="Tests all Markdownfiles"
@@ -7,7 +7,7 @@ LABEL "com.github.actions.color"="purple"
 
 LABEL "repository"="https://github.com/DK-Hostmaster/epp-xsd-files"
 
-RUN sudo apt-get install -y libxml2-utils
+RUN apt-get update -y && apt-get install -y libxml2-utils
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
