--- a/.github/workflows/xmllint.yml
+++ b/.github/workflows/xmllint.yml
@@ -7,4 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: ./github-action-xmllint
+    # This step references the directory that contains the action.
+    - uses: ./.github/actions/xmllint
