--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    # This step references the directory that contains the action.
-    - uses: ./.github/actions/spellcheck
+    - uses: rojopolis/spellcheck-github-actions@0.5.0
+      name: Spellcheck
