--- a/.github/workflows/xmllint.yml
+++ b/.github/workflows/xmllint.yml
@@ -13,7 +13,8 @@ jobs:
     # This step references the directory that contains the action.
     # - uses: ./.github/actions/xmllint
     - name: Lint info.xml
-      uses: ChristophWurst/xmllint-action@v1
+      uses: jonasbn/xmllint-action@f4550bc28a40414a9344e44b96de27b1100ecbd3
+      #uses: ChristophWurst/xmllint-action@v1
       with:
         xml-file: ./xml/{,**/}*.xml
         xml-schema-file: ./epp.xsd
